# ProofBridge

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Compliance.md  README.md  architecture.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: auto-merchant-bot-deploy.yml  backend-relayer-deploy.yml  backend-relayer-e2e.yml  backend-relayer-tests.yml  contracts-release.yml  cross-chain-e2e.yml  evm-contracts.yml  stellar-contracts.yml
apps/auto-merchant-bot/: .env.example  Dockerfile  README.md  docker-compose.yaml  package.json
apps/backend-relayer/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.e2e.yaml  docker-compose.yaml  package.json  seed.config.example.yaml  tsconfig.json
apps/dashboard/: package.json
apps/evm_contracts/: package.json
apps/frontend/: .env.example  package.json
apps/status/: package.json
apps/stellar_contracts/: Cargo.toml  chat-dump.md
apps/stellar_contracts/contracts/ad-manager/: Cargo.toml
apps/stellar_contracts/contracts/ad-manager/src/: auth.rs  eip712.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  token.rs  types.rs  validation.rs
apps/stellar_contracts/contracts/ad-manager/test_snapshots/test/ad_lifecycle_tests/: test_available_liquidity.1.json  test_close_ad_with_locks_should_fail.1.json
apps/stellar_contracts/contracts/ad-manager/test_snapshots/test/contract_tests/: test_double_initialization_fails.1.json  test_initialization.1.json
apps/stellar_contracts/contracts/ad-manager/test_snapshots/test/order_lifecycle_tests/: test_chain_configuration_lifecycle.1.json  test_view_functions_after_init.1.json
apps/stellar_contracts/contracts/ad-manager/test_snapshots/test/storage_tests/: test_ad_storage.1.json  test_manager_tracking.1.json  test_nullifier_tracking.1.json  test_order_status_lifecycle.1.json
apps/stellar_contracts/contracts/ad-manager/test_snapshots/test/validation_tests/: test_validate_order_ad_token_mismatch.1.json  test_validate_order_portal_zero_skips_check.1.json  test_validate_order_token_mismatch.1.json
apps/stellar_contracts/contracts/merkle-manager/: Cargo.toml
apps/stellar_contracts/contracts/merkle-manager/src/: errors.rs  lib.rs  mmr.rs  storage.rs  test.rs
apps/stellar_contracts/contracts/merkle-manager/test_snapshots/test/: test_append_order_hash.1.json  test_cross_chain_mmr_evm_compatibility.1.json  test_deterministic_roots.2.json  test_double_initialize_fails.1.json  test_field_mod.1.json  test_field_mod_cross_chain.1.json  test_multiple_appends_cross_chain.1.json  test_root_depends_on_order.1.json  test_root_depends_on_order.2.json  test_set_manager.1.json
apps/stellar_contracts/contracts/order-portal/: Cargo.toml
apps/stellar_contracts/contracts/order-portal/src/: auth.rs  cross_contract.rs  eip712.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  token.rs  types.rs  validation.rs
apps/stellar_contracts/contracts/order-portal/test_snapshots/test/: test_double_initialization_fails.1.json  test_initialization.1.json
apps/stellar_contracts/contracts/order-portal/test_snapshots/test/contract_tests/: test_initialization.1.json  test_view_functions_after_init.1.json
apps/stellar_contracts/contracts/order-portal/test_snapshots/test/order_lifecycle_tests/: test_get_dest_token.1.json  test_multiple_independent_orders.1.json
apps/stellar_contracts/contracts/order-portal/test_snapshots/test/storage_tests/: test_request_hash_and_token_tracking.1.json
apps/stellar_contracts/contracts/order-portal/test_snapshots/test/validation_tests/: test_validate_order_ad_token_mismatch.1.json
apps/stellar_contracts/contracts/verifier/: Cargo.toml
apps/stellar_contracts/contracts/verifier/src/: backend.rs  lib.rs  test.rs
apps/stellar_contracts/contracts/verifier/test_snapshots/test/: test_simple_circuit_verification_succeeds.1.json
apps/stellar_contracts/contracts/verifier/tests/: build_circuits.sh
apps/stellar_contracts/lib/proofbridge-core/: Cargo.toml
apps/stellar_contracts/lib/proofbridge-core/src/: auth.rs  eip712.rs  errors.rs  lib.rs  types.rs
apps/stellar_contracts/src/: lib.rs
apps/stellar_contracts/test_snapshots/: test_ad_manager_lock_for_order.1.json  test_ad_manager_unlock_with_bridger_proof.1.json  test_full_cross_chain_flow.1.json  test_nullifier_prevents_double_unlock.1.json  test_order_portal_create_and_unlock.1.json  test_verifier_rejects_tampered_proof.1.json
apps/stellar_contracts/tests/fixtures/: generate_fixtures.ts  package.json
contracts/: README.md
contracts/evm/: README.md  foundry.toml  package.json
scripts/: build_circuits.sh  run_cross_chain_e2e.sh  start_chains.sh  stop_chains.sh
(+364 files in other folders)
