[workspace]
resolver = "2"
members = ["contracts/*", "lib/*"]

[workspace.dependencies]
ed25519-dalek = { version = "2.2" }
hex = "0.4"
sha3 = { version = "0.11", default-features = false }
soroban-sdk = { version = "26.0.0-rc.1", features = ["alloc"] }
soroban-poseidon = { git = "https://github.com/Explore-Beyond-Innovations/rs-soroban-poseidon.git", rev = "9bf9d7e930cb59304d9311f0acbe3d535cae0f70" }
stellar-strkey = "0.0.16"
ultrahonk_soroban_verifier = { git = "https://github.com/Explore-Beyond-Innovations/rs-soroban-ultrahonk.git", rev = "d762995d8c181c05fe9a15962793dba6641a79ba" }
rand = "0.8"

# internal
proofbridge-core = { path = "lib/proofbridge-core" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
