[package]
name = "ad-manager"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
# Keccak256 for EIP-712 compatibility
sha3 = { version = "0.10", default-features = false }
# Stellar strkey encoding for address conversion
stellar-strkey = "0.0.13"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
hex = "0.4"

[features]
testutils = ["soroban-sdk/testutils"]
