[package]
name = "merkle-manager"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-poseidon = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
hex = { workspace = true }

[features]
testutils = ["soroban-sdk/testutils"]
